--- a/ecommerce/.env
+++ b/ecommerce/.env
@@ -1,14 +1,16 @@
+# Django secret key
 DJANGO_SECRET_KEY=your-django-secret-key
-RAZORPAY_KEY_ID=your-razorpay-key-id
-RAZORPAY_KEY_SECRET=your-razorpay-key-secret
 
-# PostgreSQL (only needed if using PostgreSQL)
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_HOST=localhost
-DB_PORT=5432
+# Set to True for local development, False for production
+DEBUG=True
 
-# Razorpay
-RAZORPAY_KEY_ID=your_razorpay_key
-RAZORPAY_KEY_SECRET=your_razorpay_secret
+# Hosts allowed to access your site (comma-separated)
+ALLOWED_HOSTS=127.0.0.1,localhost
+
+# Email settings
+EMAIL_HOST_USER=your_email@gmail.com
+EMAIL_HOST_PASSWORD=your_app_password
+
+# Razorpay credentials
+RAZORPAY_KEY_ID=rzp_test_p3fit0pVQSpiR2
+RAZORPAY_KEY_SECRET=nZ7QLHcocEp53JX6zkaSufT8
