--- a/ecommerce/.env
+++ b/ecommerce/.env
@@ -1,16 +1,16 @@
 # Django secret key
-DJANGO_SECRET_KEY=your-django-secret-key
+DJANGO_SECRET_KEY=s0meRea1lyStr0ngKeyHere123456!
 
-# Set to True for local development, False for production
-DEBUG=True
+# Debug toggle
+DEBUG=False
 
-# Hosts allowed to access your site (comma-separated)
-ALLOWED_HOSTS=127.0.0.1,localhost
+# Hosts
+ALLOWED_HOSTS=django-store-l92q.onrender.com
 
 # Email settings
 EMAIL_HOST_USER=your_email@gmail.com
 EMAIL_HOST_PASSWORD=your_app_password
 
-# Razorpay credentials
-RAZORPAY_KEY_ID=rzp_test_p3fit0pVQSpiR2
-RAZORPAY_KEY_SECRET=nZ7QLHcocEp53JX6zkaSufT8
+# Razorpay credentials (production keys)
+RAZORPAY_KEY_ID=prod_key_xxx
+RAZORPAY_KEY_SECRET=prod_secret_xxx
